welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
Set (2 * biscuits = caseOrange + 1)
       ^