welcome.lessons.welcome.variables.RunHalf.scala.code
Set (2 * biscuits = caseOrange + 1)
